kubernetes/apps/rob/kafka/cluster/bridge.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mario-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "http-cookie"
    nginx.ingress.kubernetes.io/session-cookie-expires: "172800"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "172800"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: internal
  rules:
    - host: "kafka.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: mario-bridge-service
                port:
                  name: rest-api
            path: /rob(/|$)(.*)
            pathType: ImplementationSpecific
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: leffe-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: internal
  rules:
    - host: "leffe.${SECRET_DOMAIN}"
      http:
        paths:
          - backend:
              service:
                name: leffe-bridge-service
                port:
                  name: rest-api
            path: /rob(/|$)(.*)
            pathType: ImplementationSpecific
